# dockerboard

./: .gitignore  .justfile  Cargo.toml  Dockerfile  LICENSE  config.yml
assets/css/: custom.css
assets/js/: login.js  test.js
src/: main.rs
src/http/: estatic.rs  jwt_auth.rs  mod.rs  root.rs  sse.rs  user.rs  websocket.rs
src/models/: app.rs  category.rs  config.rs  error.rs  mod.rs  user.rs
templates/: base.html  error.html  index.html  login.html
