[package]
name = "board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.1"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["multipart"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
minijinja = "1.0.6"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full", "time", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
