[package]
name = "dockerboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
cookie = "0.17.0"
docker-api = "0.14.0"
jsonwebtoken = "8.3.0"
minijinja = { version = "1.0.6", features = ["loader"] }
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full", "time", "tracing"] }
tower-http = { version = "0.4.3", features = ["trace", "fs", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
